# autoapply

./: .gitignore  CLAUDE.md  LICENSE  agent_prompt.example.txt  agent_prompt.txt  filter.sql  pyproject.toml
.claude/skills/setup/: SKILL.md
autoapply/: __init__.py  db.py  filter.py  gmail.py  pipeline.py  search.py  update.py
